--- a/GuncelTelevizyonUWP/Views/StreamsPage.xaml
+++ b/GuncelTelevizyonUWP/Views/StreamsPage.xaml
@@ -30,13 +30,13 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Image Source="{Binding ChannelImage}" Grid.Column="0" Stretch="UniformToFill" />
-                    <Grid Grid.Column="1" VerticalAlignment="Center" Margin="8,0">
+                    <Grid Grid.Column="1" VerticalAlignment="Center" Margin="12,0">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <TextBlock Text="{Binding StreamName}" Foreground="{ThemeResource SystemAccentColor}" FontWeight="SemiBold" />
-                        <TextBlock Text="{Binding ChannelName}" Foreground="{ThemeResource SystemAccentColor}" Grid.Row="1" Margin="0,2" />
+                        <TextBlock Text="{Binding CurrentStream.Name}"  FontWeight="SemiBold" />
+                        <TextBlock Text="{Binding ChannelName}"  Grid.Row="1" Margin="0,2" />
                     </Grid>
                 </Grid>
             </Grid>
