--- a/GuncelTelevizyonUWP/App.xaml
+++ b/GuncelTelevizyonUWP/App.xaml
@@ -16,6 +16,7 @@
         <converters:BooleanToVisibilityConverter x:Key="boolToVisibility" />
         <converters:BooleanToVisibilityReverseConverter x:Key="boolToVisibilityReverse" />
         <converters:DateTimeToTimeSpanConverter x:Key="timeSpanConverter" />
+        <converters:CountToVisibilityReverseConverter x:Key="countToVisibilityReverse" />
 
         <!-- Styles -->
         <Style x:Key="HorizontalContentStretchStyle" TargetType="ListViewItem">
@@ -37,6 +38,11 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
+        </Style>
+        <Style x:Key="CollectionNotFoundStyle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="26" />
+            <Setter Property="FontFamily" Value="Segoe UI Light" />
+            <Setter Property="FontWeight" Value="ExtraLight" />
         </Style>
     </helpers:BaseApplication.Resources>
     
