--- a/GuncelTelevizyonUWP/Views/StreamsPage.xaml
+++ b/GuncelTelevizyonUWP/Views/StreamsPage.xaml
@@ -62,6 +62,12 @@
     </helpers:BasePage.Resources>
     
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Visibility="{Binding IsBusy,Converter={StaticResource boolToVisibility}}">
+            <TextBlock Style="{StaticResource CollectionNotFoundStyle}" VerticalAlignment="Center" HorizontalAlignment="Stretch" TextAlignment="Center">
+                <Run Text="{Binding BusyMessage}"  />
+            </TextBlock>
+            <ProgressRing IsActive="{Binding IsBusy}" Width="75" Height="75" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,8" />
+        </StackPanel>
         <ListView ItemsSource="{Binding CurrentStreams}" 
                   SelectionMode="None"
                   ItemContainerStyle="{StaticResource HorizontalContentStretchStyle}" 
